# OpenSnep

./: .gitignore  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: update.yml
data/processed/: certif_singles_2025_clean.csv
scripts/: backfill_certifications.py  backfill_charts.py  backfill_top_radio.py  fix_artist_names_and_export.py  migrate_sqlite_to_postgres.py  update.py  update_certifications.py  update_charts.py
src/opensnep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/opensnep/api/: main.py  schemas.py
src/opensnep/cleaning/: certifications.py  charts.py
src/opensnep/database/: connection.py  load.py  models.py  query.py
src/opensnep/ingestion/: certifications.py  charts.py
tests/: test_api.py
