[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opensnep"
version = "0.1.0"
description = "French music certifications and charts API"
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4",
    "fastapi",
    "pandas",
    "python-dotenv",
    "requests",
    "sqlalchemy",
    "uvicorn",
    "psycopg2-binary",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]